kubernetes/studentsapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: students-app-service
spec:
  selector:
    app: students-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort # Use the appropriate service type for your environment
